Updated index file to include Google Font.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,9 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
